--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 
 # Ignore the default SQLite database.
 /db/*.sqlite3
+# if we're not all using the same DB, this can't go into version control
+/db/schema.rb
 
 # Ignore all logfiles and tempfiles.
 /log/*.log
