--- a/config/database.yml.example
+++ b/config/database.yml.example
@@ -1,25 +1,36 @@
-# SQLite version 3.x
-#   gem install sqlite3
 #
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
+# SQLITE3
+#
+# development:
+#   adapter: sqlite3
+#   database: db/development.sqlite3
+#   pool: 5
+#   timeout: 5000
+
+# test:
+#   adapter: sqlite3
+#   database: db/test.sqlite3
+#   pool: 5
+#   timeout: 5000
+
+#
+# ORACLE
+#
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: oracle_enhanced
+  database: tstm-scan.visi.gdi:1521/dev_evo_tsms
+  username: [user]_sdev
+  password: abcd1234
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  adapter: sqlite3
-  database: db/test.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: oracle_enhanced
+  database: tstm-scan.visi.gdi:1521/dev_evo_tsms
+  username: [user]_stst
+  password: abcd1234
 
-production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+
+stage:
+  adapter: oracle_enhanced
+  database: tstm-scan.visi.gdi:1521/estg
+  username: xact
+  password: b4h16mrt
