Fix build; add thread id to logger; use check_complete! instead of complete!

--- a/config/log4r.yml
+++ b/config/log4r.yml
@@ -16,7 +16,7 @@ log4r_config:
       dirname     : "#{LOG_DIR}"
       formatter   :
         date_pattern: '%X'
-        pattern     : "%l %d pid=#{Process.pid} :: %m"
+        pattern     : "%l %d pid=#{Process.pid} tid=%h :: %m"
         type        : PatternFormatter
 
   
