--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -216,6 +216,11 @@ stage-ep:
   monitor_mode: true
   app_name: XACT (stage-ep)
 
+stage:
+  <<: *default_settings
+  monitor_mode: true
+  app_name: XACT (stage)
+
 # Turn on the agent in production for 24x7 monitoring. NewRelic
 # testing shows an average performance impact of < 5 ms per
 # transaction, you can leave this on all the time without
