--- a/.gitignore
+++ b/.gitignore
@@ -18,9 +18,13 @@
 /tmp
 /config/database.yml
 .tags
-.rvmrc
 .tags_sorted_by_file
 .jbundler/classpath.rb
 /ext/java/**/*
 build/**/*
 config/newrelic.yml
+
+#rvm or whatever
+.rvmrc
+.ruby-version
+.ruby-gemset
