--- a/config/trinidad.yml
+++ b/config/trinidad.yml
@@ -21,7 +21,7 @@ extensions:
     maxIdle: -1
     maxWait: 10000
     testOnBorrow: true
-    testOnReturn: true
+    testOnReturn: false
     validationQuery: SELECT 1 FROM dual
     accessToUnderlyingConnectionAllowed: true
 http:
