--- a/config/trinidad.yml
+++ b/config/trinidad.yml
@@ -20,14 +20,17 @@ extensions:
     password: <%=password%>
     maxActive: 10
     minIdle: 0
-    minEvictableIdleTimeMillis: 10000
-    maxIdle: -1
+    maxIdle: 5
+    minEvictableIdleTimeMillis: 5000
+    timeBetweenEvictionRunsMillis: 5000
     maxWait: 10000
-    testOnBorrow: true
     removeAbandoned: true
+    #removeAbandonedTimeout: 60
+    suspectTimeout: 60
     logAbandoned: true
-    validationQuery: SELECT 1 FROM dual
-    validationInterval: 30000
+    #testOnBorrow: true
+    #validationQuery: SELECT 1 FROM dual
+    #validationInterval: 30000
     accessToUnderlyingConnectionAllowed: true
 http:
   # incoming trafffc in deployed envs comes via ajp (except from nagios)
