Log whenever a job is being picked up for processing.
Changed logging date pattern to log microseconds.

And nobody's using passenger to run XACT, right...?

relates to:
XACT-202

--- a/config/log4r.yml
+++ b/config/log4r.yml
@@ -15,7 +15,7 @@ log4r_config:
       trunc       : 'false'
       dirname     : "#{LOG_DIR}"
       formatter   :
-        date_pattern: '%X'
+        date_pattern: '%X.%6N'
         pattern     : "%l %d pid=#{Process.pid} tid=%h :: %m"
         type        : PatternFormatter
 
