Revert 49f0b15a3a9c123b8aa1e5402ef1f70270738fcf and a160fac4ed3ef983c9881bea59ca48019371b76f because sidetiq was using 100% CPU all the time for no reason

--- a/config/trinidad.yml
+++ b/config/trinidad.yml
@@ -9,6 +9,8 @@ jruby_min_runtimes: 1
 jruby_max_runtimes: 1
 address: 0.0.0.0
 extensions:
+  scheduler:
+    # trinidad_scheduler_extension
   generic_dbpool:
     driverPath: 'lib/ojdbc6.jar'
     driverName: 'oracle.jdbc.driver.OracleDriver'
