--- a/config/trinidad.yml
+++ b/config/trinidad.yml
@@ -20,6 +20,7 @@ extensions:
     username: <%=username%>
     password: <%=password%>
     maxActive: 20
+    maxAge: 3600000
     minIdle: 5
     maxIdle: 15
     minEvictableIdleTimeMillis: 30000
