--- a/config/trinidad.yml
+++ b/config/trinidad.yml
@@ -10,6 +10,7 @@ jruby_max_runtimes: 1
 address: 0.0.0.0
 extensions:
   generic_dbpool:
+    factory: org.apache.tomcat.jdbc.pool.DataSourceFactory
     driverPath: 'lib/ojdbc6.jar'
     driverName: 'oracle.jdbc.driver.OracleDriver'
     initSQL: SELECT 2 FROM DUAL
