--- a/config/trinidad.yml
+++ b/config/trinidad.yml
@@ -22,7 +22,6 @@ extensions:
     url: jdbc:oracle:thin:@//<%=database%>
     username: <%=username%>
     password: <%=password%>
-    fairQueue: true
     initialSize: 10
     maxActive: 25
     maxIdle: 10
@@ -33,10 +32,10 @@ extensions:
     maxWait: 10000
     suspectTimeout: 15 #seconds
     logAbandoned: true
-    removeAbandoned: false
+    removeAbandoned: true
     removeAbandonedTimeout: 60 #seconds
-    testOnBorrow: true
-    testWhileIdle: false
+    testOnBorrow: false
+    testWhileIdle: true
     validationQuery: SELECT 1 FROM dual
     validationInterval: 60000
 http:
