--- a/config/trinidad.yml
+++ b/config/trinidad.yml
@@ -12,34 +12,36 @@ jruby_max_runtimes: 1
 address: 0.0.0.0
 extensions:
   generic_dbpool:
-    factory: org.apache.tomcat.jdbc.pool.DataSourceFactory
-    jdbcInterceptors: 'ConnectionState'
+    jndi: jdbc/xact
+    #uncomment to use tomcat-dbcp and disable tomcat-jdbc
+    #pool: dbcp
     driverPath: 'lib/ojdbc6.jar'
     driverName: 'oracle.jdbc.driver.OracleDriver'
-    initSQL: SELECT 2 FROM DUAL
-    # this should be the same as what is in database.yml
-    jndi: jdbc/xact
-    # expected to be 'host.gdi:port/service_name'
     url: jdbc:oracle:thin:@//<%=database%>
     username: <%=username%>
     password: <%=password%>
     initialSize: 25
     maxActive: 25
-    maxIdle: 20
+    maxIdle: 5
     minIdle: 5
-    maxAge: 3600000
-    minEvictableIdleTimeMillis: 30000
+    minEvictableIdleTimeMillis: 60000
     timeBetweenEvictionRunsMillis: 30000
     maxWait: 10000
-    suspectTimeout: 30
     logAbandoned: <%= debug.to_s %>
-    removeAbandoned: true
     removeAbandonedTimeout: 60 #seconds
+    removeAbandoned: true
     testOnBorrow: true
-    testWhileIdle: true
+    testWhileIdle: false
+    testOnReturn: true
     validationQuery: SELECT 1 FROM dual
-    validationInterval: 60000
+
+    # **** tomcat-jdbc specific properties ****
+    #jdbcInterceptors: 'ConnectionState'
+    initSQL: SELECT 2 FROM DUAL
+    suspectTimeout: 30
+    validationInterval: 10000
     logValidationErrors: <%= debug.to_s %>
+    maxAge: 3600000
 http:
   # incoming traffic in deployed envs comes via ajp (except from nagios)
   acceptCount: 5
