XACT-244 fuck it, no more external dbcp since we might not even need it. Remove the jndi: line from your database.yml.

--- a/config/trinidad.yml
+++ b/config/trinidad.yml
@@ -10,43 +10,12 @@
 jruby_min_runtimes: 1
 jruby_max_runtimes: 1
 address: 0.0.0.0
-extensions:
-  generic_dbpool:
-    jndi: jdbc/xact
-    #uncomment to use tomcat-dbcp and disable tomcat-jdbc
-    #pool: dbcp
-    driverPath: 'lib/ojdbc6.jar'
-    driverName: 'oracle.jdbc.driver.OracleDriver'
-    url: jdbc:oracle:thin:@//<%=database%>
-    username: <%=username%>
-    password: <%=password%>
-    initialSize: 10
-    maxActive: 10
-    maxIdle: 10
-    minIdle: 5
-    minEvictableIdleTimeMillis: 60000
-    timeBetweenEvictionRunsMillis: 30000
-    maxWait: 10000
-    logAbandoned: <%= debug.to_s %>
-    removeAbandonedTimeout: 90 #seconds
-    removeAbandoned: true
-    testOnBorrow: true
-    testWhileIdle: false
-    testOnReturn: true
-    validationQuery: SELECT 1 FROM dual
-
-    # **** tomcat-dbcp need this ****
-    accessToUnderlyingConnectionAllowed: true
-
-    # **** tomcat-jdbc specific properties ****
-    #jdbcInterceptors: 'ConnectionState'
-    initSQL: SELECT 2 FROM DUAL
-    suspectTimeout: 45 #seconds
-    validationInterval: 60000
-    logValidationErrors: true
-    maxAge: 3600000
 http:
-  # incoming traffic in deployed envs comes via ajp (except from nagios)
+  # incoming traffic in deployed envs comes via ajp (except from nagios or in dev)
   acceptCount: 100
   maxThreads: 1
+ajp:
+  maxThreads: 100
+  port: 8009
+  connectionTimeout: 600000
 
