--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,9 @@
 build/**/*
 config/newrelic.yml
 public/custom_reports/**/*
+
+#rvm or whatever
+.rvmrc
+.ruby-version
+.ruby-gemset
+/Vagrantfile
