--- a/config/sidekiq_rate_limited_queues.yml
+++ b/config/sidekiq_rate_limited_queues.yml
@@ -3,6 +3,6 @@
 #     Odm::TmsExtendedSenderWorker.sidekiq_options[:throttle_key].call({})
 #
 ---
-#sender:
-#  interval: 15
-#  limit: 5
+sender:
+  interval: 15
+  limit: 5
