--- a/config/analytics.yml
+++ b/config/analytics.yml
@@ -15,7 +15,7 @@ test:
   kafkas:
     - 192.168.50.3:9093
 
-qc:
+qc-ep:
   <<: *shared
   kafkas:
     - qc-kafka1-ep.tops.gdi:9093
@@ -26,21 +26,21 @@ qc:
     - qc-zk2-ep.tops.gdi:2181
     - qc-zk3-ep.tops.gdi:2181
 
-integration:
+integration-ep:
   <<: *shared
   kafkas:
     - int-kafka1-ep.tops.gdi:9093
   zookeepers:
     - int-zk1-ep.tops.gdi:2181
 
-stage:
+stage-ep:
   <<: *shared
   kafkas:
     - stg-kafka1-ep.tops.gdi:9093
   zookeepers:
     - stg-zk1-ep.tops.gdi:2181
 
-production:
+production-ep:
   <<: *shared
   kafkas:
     - prod-kafka1-ep.tops.gdi:9093
