XACT-394 listen to throttled queues on startup. Don’t throttle a queue unless the server has published it as a throttled queue.

--- a/config/sidekiq_rate_limited_queues.yml
+++ b/config/sidekiq_rate_limited_queues.yml
@@ -3,6 +3,9 @@
 #     Odm::TmsExtendedSenderWorker.sidekiq_options[:throttle_key].call({})
 #
 ---
-sender:
-  interval: 15
-  limit: 5
+#sender:
+#  interval: 15
+#  limit: 5
+sender_hi_im_billy:
+  interval: 60
+  limit: 1000
