XACT-394 fix dynamic queue checking fail

--- a/config/sidekiq_rate_limited_queues.yml
+++ b/config/sidekiq_rate_limited_queues.yml
@@ -3,9 +3,6 @@
 #     Odm::TmsExtendedSenderWorker.sidekiq_options[:throttle_key].call({})
 #
 ---
-#sender:
+#sender_message-subject:
 #  interval: 15
 #  limit: 5
-sender_hi_im_billy:
-  interval: 60
-  limit: 1000
