something about the redis gem appears to be breaking QC (because of redis-sentinel, maybe?)

--- a/.env
+++ b/.env
@@ -19,3 +19,4 @@ export ANALYTICS_KAFKAS="192.168.50.3:9093"
 export ANALYTICS_ZOOKEEPERS="192.168.50.2:2181"
 
 export REDIS_URI="redis://localhost:6379/1"
+#export REDIS_SENTINEL_URIS="sentinel://localhost:6479/1"
