get rid of config.ENV.yml files, use config.local.yml for local machine config and config.test.yml for running tests

--- a/.gitignore
+++ b/.gitignore
@@ -16,11 +16,7 @@
 /log/jakety-jak.log*
 /tmp
 /config/database.yml
-/config/config.development.yml
-/config/config.qc.yml
-/config/config.integration.yml
-/config/config.stage.yml
-/config/config.prod.yml
+/config/config.local.yml
 .vagrant/
 .tags
 .tags_sorted_by_file
