--- a/config/config.yml
+++ b/config/config.yml
@@ -15,6 +15,15 @@ analytics_kafkas: []
 analytics_zookeepers: []
 redis_sentinel_uris: [] # optional for environments with
 nsca_password: ""       # for nagios alerting
+shared_phone_numbers:
+  - '+16514336311' # dev
+  - '+16519684981' # qc
+  - '+18573665390' # qc
+  - '+19177468378' # int
+  - '+16122604683' # stage
+  - '468311'       # production
+  # 89568 467873 566948 734876 667873 99511 - production short codes (as of 4/2015)
+  # TXLOT INSURE KNOWIT seguro MNSURE WY511 - don't forward these, stop commands will handle unsubscribing
 
 # set these to run seed data
 #twilio_sid: 'fake'
