XACT-635: reverting to simple link detection as the default

--- a/config/config.yml
+++ b/config/config.yml
@@ -33,4 +33,4 @@ secret_key_base: #nil
 #twilio_test_sid: 'fake'
 #twilio_test_token: 'fake'
 
-use_simple_link_detection: false
+use_simple_link_detection: true
