XACT-646 * use jakety_jak to publish to kafka * remove yakety_yak * add some log4j * set request.required.acks for improved durability * make publisher options configurable via config.yml

--- a/config/config.yml
+++ b/config/config.yml
@@ -13,6 +13,9 @@
 analytics_enabled: false
 analytics_kafkas: []
 analytics_zookeepers: []
+analytics:
+  publisher_options:
+    request.required.acks: '1'
 redis_sentinel_uris: [] # optional for environments with
 nsca_password: ""       # for nagios alerting
 shared_phone_numbers:
