--- a/config/application.conf
+++ b/config/application.conf
@@ -1,7 +1,7 @@
 akka {
   loggers = ["akka.event.slf4j.Slf4jLogger"]
   logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
-  loglevel = "DEBUG"
+  loglevel = "WARN"
   actor.debug.fsm = "on"
   log-dead-letters-during-shutdown = false
 }
