--- a/gd-xact.spec.in
+++ b/gd-xact.spec.in
@@ -73,6 +73,7 @@ cp -r %{_builddir}/*           %{buildroot}/opt/%{_name}/releases/%{version}-%{r
 %attr(0775, -, -)     /opt/%{_name}/releases/%{version}-%{release}/deploy.sh
 %attr(0775, -, -)     /opt/%{_name}/releases/%{version}-%{release}/bin/*
 %attr(0775, -, -)     /opt/%{_name}/releases/%{version}-%{release}/script/*
+%attr(0775, -, -)     /opt/%{_name}/releases/%{version}-%{release}/bundle/jruby/1.9/bin/*
 
 %changelog
 * Wed Dec 22 2015 jason saxon <jason.saxon@GovDelivery.com> 
