--- a/gd-xact.spec.in
+++ b/gd-xact.spec.in
@@ -19,8 +19,8 @@ Source0:        %{_name}-%{version}.tar.gz
 
 BuildRequires:  git
 BuildRequires:  oracle-instantclient11.2-devel
-BuildRequires:  jruby
-BuildRequires:  jrubygem-bundler
+BuildRequires:  jruby = 1.7.25
+BuildRequires:  jrubygem-bundler >= 1.11.0
 
 Requires:       gd-xact-code%{version}
 Requires:       gd-xact-fake-libclntsh
