--- a/config/log4j.properties
+++ b/config/log4j.properties
@@ -1,5 +1,5 @@
 # Default log level
-log4j.rootCategory=DEBUG, dailylog
+log4j.rootCategory=INFO, dailylog
 
 log4j.appender.dailylog=org.apache.log4j.DailyRollingFileAppender
 log4j.appender.dailylog.File=log/jakety-jak${HOSTNAME_SHORT}.log
