--- a/gd-xact.spec.in
+++ b/gd-xact.spec.in
@@ -5,8 +5,8 @@
 %define _noarch_libdir /usr/lib
 %define _name @name@
 
-# Evolution has a package namespace conflict that leads to a convention of 
-# prefixing with gd being a good idea. This practice will likely have other 
+# Evolution has a package namespace conflict that leads to a convention of
+# prefixing with gd being a good idea. This practice will likely have other
 # connascent but useful properties.
 Name:           gd-%{_name}
 Version:        %{_version}
@@ -24,7 +24,7 @@ BuildRequires:  jrubygem-bundler = 1.12.5
 
 Requires:       gd-xact-code%{version}
 Requires:       gd-xact-fake-libclntsh
-BuildRequires:  jruby1.7.25
+Requires:       jruby1.7.25
 Requires:       jrubygem-bundler = 1.12.5
 
 %description
@@ -39,13 +39,13 @@ Requires:    oracle-instantclient11.2-basic
 Provides:    libclntsh.so.11.1
 
 %description fake-libclntsh
-Xact fake package for providing libclntsh.so.11.1 for rpm dependencies 
+Xact fake package for providing libclntsh.so.11.1 for rpm dependencies
 because oracle-instantclient11.2-basic does not do it.
 
 %package code%{version}
 Summary:     Xact code base
 AutoReqProv: no
- 
+
 %description code%{version}
 Xact code base.
 
@@ -76,5 +76,5 @@ cp -r %{_builddir}/*           %{buildroot}/opt/%{_name}/releases/%{version}-%{r
 %attr(0775, -, -)     /opt/%{_name}/releases/%{version}-%{release}/bundle/jruby/1.9/bin/*
 
 %changelog
-* Wed Dec 22 2015 jason saxon <jason.saxon@GovDelivery.com> 
+* Wed Dec 22 2015 jason saxon <jason.saxon@GovDelivery.com>
 - Initial package build
