Downgrade to jrubygem 1.11 because 1.12 (currently) deps on jruby9k

--- a/gd-xact.spec.in
+++ b/gd-xact.spec.in
@@ -20,12 +20,12 @@ Source0:        %{_name}-%{version}.tar.gz
 BuildRequires:  git
 BuildRequires:  oracle-instantclient11.2-devel
 BuildRequires:  jruby1.7.25
-BuildRequires:  jrubygem-bundler = 1.12.5
+BuildRequires:  jrubygem-bundler >= 1.11.0
 
 Requires:       gd-xact-code%{version}
 Requires:       gd-xact-fake-libclntsh
 Requires:       jruby1.7.25
-Requires:       jrubygem-bundler = 1.12.5
+Requires:       jrubygem-bundler >= 1.11.0
 
 %description
 GovDelivery Xact Package
