XACT-821 * implement kahlo vendor pubsub * refactor some mblox code for reuse * write e2e test for kahlo (loopback only) * make a qc.yaml file to try on QC * fix some Synapse config things * extract message body env stuff into a service * cucumber dev+qc configs

--- a/features/support/config/common.yaml
+++ b/features/support/config/common.yaml
@@ -32,6 +32,7 @@ sms_vendors:
       password: '5b1c96ca034d474c6d4b68f8d05c99f5'
       shared: true
       twilio_test: false
+  #kahlo_loopback:
 voice_vendors:
   # live:                     # is env-specific
   loopback:
