CM-2937 Update requires for jruby1.7.25
Because of multiple existing jruby packages of conflicting versions:
1.7.25 and 9.x, explicitly requiring jruby1.7.25 ensures that the
correct package is installed and not upgraded to a potentially
incompatible version -- until otherwise modified in the spec file.

--- a/gd-xact.spec.in
+++ b/gd-xact.spec.in
@@ -19,12 +19,12 @@ Source0:        %{_name}-%{version}.tar.gz
 
 BuildRequires:  git
 BuildRequires:  oracle-instantclient11.2-devel
-BuildRequires:  jruby = 1.7.25
+BuildRequires:  jruby1.7.25
 BuildRequires:  jrubygem-bundler = 1.12.5
 
 Requires:       gd-xact-code%{version}
 Requires:       gd-xact-fake-libclntsh
-Requires:       jruby = 1.7.25
+Requires:       jruby1.7.25
 Requires:       jrubygem-bundler = 1.12.5
 
 %description
