--- a/config/config.yml
+++ b/config/config.yml
@@ -29,6 +29,7 @@ secret_key_base: #nil
 mblox_api_key: 09047bedd24a450b9a037e34b59029df
 mblox_service_account: govdeliverytest
 allowed_geckoboard_accounts: [10_060]
+sms_response_message_type: 'urgent'
 
 #fallback for new relic conf name
 new_relic:
